--- a/LePats/Others/Main.storyboard
+++ b/LePats/Others/Main.storyboard
@@ -163,7 +163,7 @@
                             </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="FG5-RM-Xlm">
                                 <rect key="frame" x="0.0" y="263" width="414" height="424"/>
-                                <color key="backgroundColor" red="0.43565218820000001" green="1" blue="0.58052918720000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.094117647060000004" green="0.70588235290000001" blue="0.92941176469999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="424" id="p6Y-vd-igb"/>
                                 </constraints>
