--- a/LePats/Others/Main.storyboard
+++ b/LePats/Others/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <scenes>
         <!--Left View Controller-->
@@ -166,10 +166,10 @@
             </objects>
             <point key="canvasLocation" x="913" y="-817"/>
         </scene>
-        <!--View Controller-->
+        <!--求助-->
         <scene sceneID="vB3-ak-p2P">
             <objects>
-                <viewController id="fOV-tY-FQM" sceneMemberID="viewController">
+                <viewController title="求助" id="fOV-tY-FQM" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="6ZT-qZ-CCf"/>
                         <viewControllerLayoutGuide type="bottom" id="OCd-eb-41S"/>
@@ -204,10 +204,10 @@
             </objects>
             <point key="canvasLocation" x="-240" y="2062"/>
         </scene>
-        <!--Root View Controller-->
+        <!--服务-->
         <scene sceneID="BCZ-hP-8q7">
             <objects>
-                <tableViewController id="NhO-wP-LH3" sceneMemberID="viewController">
+                <tableViewController title="服务" id="NhO-wP-LH3" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="zqs-D8-45v">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -226,11 +226,10 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Root View Controller" id="cj6-p1-8oa"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EWj-o2-EFf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="592" y="3253"/>
+            <point key="canvasLocation" x="542" y="3224"/>
         </scene>
         <!--服务-->
         <scene sceneID="qS5-3C-tLR">
